# prism-widgets

./: Cargo.toml  PKGBUILD  README.md
.github/workflows/: ci.yml
crates/prism-widgets/: Cargo.toml
crates/prism-widgets-core/: Cargo.toml
crates/prism-widgets-core/src/: lib.rs
crates/prism-widgets-host/: Cargo.toml
crates/prism-widgets-host/src/: lib.rs
crates/prism-widgets-providers/: Cargo.toml
crates/prism-widgets-providers/src/: lib.rs
crates/prism-widgets-ui/: Cargo.toml
crates/prism-widgets-ui/src/: lib.rs
crates/prism-widgets/src/: config.rs  main.rs
docs/: ARCHITECTURE.md
resources/: default-config.kdl
